ghc-4335c07/testsuite/tests/deriving/should_run/T5628.hs
{-# LANGUAGE EmptyDataDecls, StandaloneDeriving #-}
module Main where

data Z
deriving instance Eq Z

g :: Z
g = g

main :: IO ()
main = print (g == g)
